--- a/public/assets/css/collection/style.css
+++ b/public/assets/css/collection/style.css
@@ -271,3 +271,50 @@ footer .container-fluid:last-child {
 tr {
 	vertical-align: middle;
 }
+
+
+.select-cus{
+    top: 44px;
+    width: 110%;
+    left: -5%;
+    min-width: 220px;
+    z-index: 1000;
+    display: none;
+    
+}
+
+.select-cus .btn-group{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.select-cus button{
+    max-width: 120px;;
+}
+
+.cus-search input{
+    max-width:none;
+}
+
+.select-cus .cus-option{
+    padding: 4px;
+    cursor: pointer;
+}
+
+.select-cus .cus-option:hover{
+    color: #4CA7EE;
+    /* color: white; */
+}
+
+.cus-bg{
+    z-index: -1;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    /* display: none; */
+}
+
+.cus-notfound{
+    display: none;
+}
