myjob personal video modal

--- a/public/assets/css/collection/applicant.css
+++ b/public/assets/css/collection/applicant.css
@@ -325,3 +325,12 @@ tr:last-child td:first-child {
   background-color: #BB3232;
   min-width: 100px;
 }
+
+
+.pre-content,
+.eval-content{
+	height: 360px;
+}
+.text-content{
+	height: 180px;
+}
