--- a/public/assets/css/collection/style.css
+++ b/public/assets/css/collection/style.css
@@ -283,6 +283,14 @@ tr {
     
 }
 
+@media (max-width: 990px){
+	.select-cus{
+		width: 98%;
+		left: 1%;
+		
+	}
+
+}
 .select-cus .btn-group{
     display: flex;
     justify-content: flex-end;
