--- a/public/assets/css/create-interview/index.css
+++ b/public/assets/css/create-interview/index.css
@@ -302,3 +302,11 @@ select {
 .card.active .question-no {
     background-color: var(--bs-primary) !important;
 }
+
+.card:first-child .delete{
+    display: none;
+}
+
+.up, .down, .copy, .delete{
+    cursor: pointer;
+}
