--- a/public/assets/css/companyMana/create.css
+++ b/public/assets/css/companyMana/create.css
@@ -93,3 +93,8 @@ main {
     display: block;
     transition: display 0.3s ease-in;
 }
+
+form .text-danger {
+    margin-left: 12px;
+    font-size: 12px;
+}
