--- a/public/assets/css/common/bootstrap.css
+++ b/public/assets/css/common/bootstrap.css
@@ -5,6 +5,10 @@
  * Copyright 2011-2023 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+* {
+    font-family: 'Noto Sans Japanese', sans-serif;
+}
+
 :root,
 [data-bs-theme=light] {
     --bs-blue: #4cadee;
