--- a/public/assets/css/create-interview/index.css
+++ b/public/assets/css/create-interview/index.css
@@ -243,7 +243,18 @@ select {
 .question-ai .input-time {
     display: none;
 }
-
+@media (max-width: 1199px) {
+    .input-retake > div:nth-child(1) > label,
+    .input-time > label,
+    .input-limit > label,
+    .input-max > label,
+    .input-thinking-time > label {
+        margin-top: 12px!important;
+    }
+    .input-type {
+        margin: 0px!important;
+    }
+}
 #add_questioin:hover{
     background-color: #e4e4e4;
 }
