--- a/public/assets/css/application/application.css
+++ b/public/assets/css/application/application.css
@@ -896,3 +896,18 @@ td.active {
     font-size: 16px;;
   }
 }
+
+.counter {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+.counter-no{
+  width: 120px;
+  height: 120px;
+  font-size: 100px;
+  line-height: 100px;
+  color:#707070;
+}
